--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ body{
 h1,h2,h3,h4,h5,h6{
     color: rgb(254, 255, 255);
 }
+h1, a:hover{
+    color: red;
+}
 .header-contact{
     float: right;
     padding: 33px;
