--- a/style.css
+++ b/style.css
@@ -4,35 +4,33 @@
 
 }
 body{
-    background-color: blanchedalmond;
     font-family: 'Raleway', sans-serif;
 }
-.content{
-    max-width: 1000px;
-    
-    background-color: rgb(127, 202, 255);
+.container{
+    max-width: 1000px;    
     margin: 0 auto;
    padding: 20px;
+   background: rgba(201, 198, 210, 0.219);
 }
 
 .profile-image{
-
     width: 100px;
-    height: 120px;
+    height: 100px;
     border: 3px solid white;
     border-radius: 50%;
     float: left;
+    object-fit: cover;
 }
 
 .header-bio{
     float: left;
     padding: 35px;
+    color: #000244;
 }
-h1,h2,h3,h4,h5,h6{
-    color: rgb(254, 255, 255);
-}
+
+
 h1, a:hover{
-    color: red;
+    color: #000244;
 }
 .header-contact{
     float: right;
@@ -40,15 +38,15 @@ h1, a:hover{
 }
 
 .header-contact a{
+    font-size: 16px;
     text-decoration: none;
     font-weight: bold;
-    color: blue; 
-    opacity: 3s;
+    color: #000244; 
     font-size: 20px;
+    transition: .2;
 }
 .header-contact a:hover{
-    text-decoration: underline;
-    color: whitesmoke;
+    color: #000123;
 }
 .div-clear{
     clear: both;
@@ -64,13 +62,18 @@ hr{
    
 
 }
+.common-hr{
+    border: 5px solid black;
+    width: 100%;
+    margin: 20px auto;
+    border-bottom: none;
+   
+
+}
 
 /*personal-sectino stert*/
 
 
-.content{
-    margin-bottom: 30px auto;
-}
 .left-div{
     width: 30%;
     float: left;
@@ -83,7 +86,7 @@ hr{
 }
 
 .common-hr{
-    border: 7px solid rgb(249, 243, 243);
+    border: 5px solid rgb(0, 0, 0);
     width: 100%;
     margin: 20px auto;
     border-bottom: none;
